# weekly-vocabulary

./: .env.dev  .gitignore  Cargo.toml  Makefile  README.md  compose.yml  openapi.yml  package.json  pnpm-lock.yaml
application/src/: handler.rs  vocabulary.rs
backend/: .env.dev  Cargo.toml  Dockerfile.dev  Makefile  compose.yml
backend/application/: Cargo.toml
backend/application/api/: Cargo.toml
backend/application/api/src/: app_state.rs  controller.rs  handler.rs  lib.rs  mod.rs  route.rs  vocabulary.rs
backend/application/src/: handler.rs
backend/database/: definition.sql
backend/src/: handler.rs  lib.rs  main.rs  mod.rs  route.rs  vocabulary.rs
database/: definition.sql
src/: lib.rs  main.rs  vocabulary.rs
