[package]
name = "weekly-vocabulary"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.7.4"
tokio = { version = "1.35.1", features = ["macros", "rt-multi-thread"] }
mysql = "24.0.0"
dotenv = "0.15.0"
serde_json = "1.0.113"
serde = "1.0.196"
